--- a/Movie App/index.html
+++ b/Movie App/index.html
@@ -8,7 +8,11 @@
     <title>Movie App</title>
 </head>
 <body>
-    <div class="main"></div>
+    <div class="main">
+        <div class="container">
+            
+        </div>
+    </div>
    <script src="./js/app.js"></script> 
 </body>
 </html>
