--- a/Digital Clock/index.html
+++ b/Digital Clock/index.html
@@ -15,6 +15,8 @@
             <div class="minute d">00</div>
             <div class="secdot">:</div>
             <div class="second d">00</div>
+            <div class="secdot">:</div>
+            <div class="period d">AM</div>
         </div>
         <div class="date-container">
             <div class="full-date">12 jan 2025</div>
